fix: header overflow

--- a/css/style.css
+++ b/css/style.css
@@ -151,8 +151,12 @@ header .nav-link::after {
 /* ----- HEADER BOTTOM ----- */
 .header_bottom {
     background-color: white;
-    max-height: calc(100vh - 2rem);
-    overflow: auto;
+}
+@media screen and (max-width: 768px) {
+    .header_bottom {
+        max-height: calc(100vh - 2rem);
+        overflow: auto;        
+    }
 }
 .navbar {
     padding: 0;
